Enhance code explanation feature by adding API key retrieval and improving error handling; update popup structure and button functionality

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Real Time Code Explainer</title>
@@ -9,6 +9,18 @@
   <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
   <button id="explainButton">Explain Code</button>
   <div id="explanation"></div>
+  <script src="popup.js"></script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>GitHub Code Explainer</title>
+  <link rel="stylesheet" type="text/css" href="popup.css">
+</head>
+<body>
+  <h1>GitHub Code Explainer</h1>
+  <button id="explainButton">Explain Current Page Code</button>
   <script src="popup.js"></script>
 </body>
 </html>
